--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,50 @@
-click
-Sphinx
-coverage
-awscli
-flake8
-python-dotenv>=0.5.1
+absl-py==0.7.0
+arrow==0.10.0
+astor==0.7.1
+binaryornot==0.4.3
+certifi==2016.2.28
+colorama==0.3.9
+cookiecutter==1.5.1
+cycler==0.10.0
+decorator==4.1.2
+future==0.16.0
+gast==0.2.2
+grpcio==1.18.0
+h5py==2.9.0
+ipykernel==4.6.1
+ipython==6.1.0
+ipython-genutils==0.2.0
+jedi==0.10.2
+jinja2-time==0.2.0
+jupyter-client==5.1.0
+jupyter-core==4.3.0
+Keras==2.2.4
+Keras-Applications==1.0.6
+Keras-Preprocessing==1.0.5
+kiwisolver==1.0.1
+Markdown==3.0.1
+matplotlib==3.0.2
+numpy==1.16.0
+path.py==10.3.1
+pickleshare==0.7.4
+poyo==0.4.1
+prompt-toolkit==1.0.15
+protobuf==3.6.1
+Pygments==2.2.0
+pyparsing==2.3.1
+python-dateutil==2.6.1
+PyYAML==3.13
+pyzmq==16.0.2
+scipy==1.2.0
+simplegeneric==0.8.1
+six==1.12.0
+tensorboard==1.12.2
+tensorflow-gpu==1.12.0
+termcolor==1.1.0
+tornado==4.5.2
+traitlets==4.3.2
+wcwidth==0.1.7
+Werkzeug==0.14.1
+whichcraft==0.4.1
+win-unicode-console==0.5
+wincertstore==0.2
